<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg_color"
    android:backgroundTint="@color/main_bg_color"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.fragment.register.ResetPasswordFragment">


    <ImageView
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:src="@drawable/ic_back"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="@+id/tvLabelSignUp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvLabelSignUp"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/tvLabelSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/inter_black"
        android:text="@string/log_in"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintStart_toEndOf="@id/buttonBack"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvLabelRest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_the_password"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/tvLabelSignUp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/edittext_bg"
        android:fontFamily="@font/inter"
        android:hint="@string/hint_enter_your_email"
        android:textColor="#e6e6e6"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginStart="32dp"
        android:textColorHint="#e6e6e6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLabelRest" />

    <Button
        android:id="@+id/buttonReset"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/inter"
        android:textStyle="bold"
        android:backgroundTint="@color/purple_200"
        android:text="@string/reset"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextEmail" />



</androidx.constraintlayout.widget.ConstraintLayout>