<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/main_bg_color"
    tools:context=".presentation.fragment.screens.ScreenOneFragment">


    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="match_parent"
        android:layout_height="452dp"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/illustration1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvLabelCreateProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_black"
        android:text="@string/create_profile"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        android:layout_marginTop="52dp"
        app:layout_constraintTop_toBottomOf="@id/ivLogo"/>

    <TextView
        android:id="@+id/tvLabelShow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/show_what_a_sports_enthusiast_you_are"
        android:textColor="#778595"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tvLabelCreateProfile"/>

    <ImageButton
        android:id="@+id/buttonNext"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/bg_button_next"
        android:rotation="180"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="16dp"
        app:tint="@color/white"
        tools:layout_editor_absoluteX="10dp" />

    <ImageView
        android:layout_width="32dp"
        android:layout_height="8dp"
        android:src="@drawable/slider1"
        android:contentDescription="@string/app_name"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>